<resources>
    //App name
    <string name="app_name">YaTQA</string>

    /login and favorite fragment
    <string name="favoritesTitle">Favorites</string>
    <string name="loginTitle">Login</string>
    <string name="ip">IP</string>
    <string name="connect">connect</string>
    <string name="saveToFav">save to favorites</string>
    <string name="toFav">go to favorites</string>
    <string name="loginName">Username</string>
    <string name="loginPassword">Password</string>
    <string name="favName">List name</string>
    <string name="edit">edit</string>
    <string name="del">delete</string>
    <string name="saveChanges">save changes</string>
    <string name="toLogin">go to manual login</string>
    <string name="favInfo"><b>Welcome to YaTQA-mobile.</b>\n\n
No favorites are saved yet.\n
You can create a favorite when logging in manually.</string>

    //global stats
    <string name="globalServerTitle">Global Server</string>
    <string name="Stats">Statistics(From the server\'s point of view)</string>
    <string name="vServerTitle">Virtual server</string>
    <string name="vServerOnline">Server online:</string>
    <string name="useOnline">User:</string>
    <string name="userOnlineValue">%1$s/%2$s</string>
    <string name="channel">Channel:</string>
    <string name="currUploadTitle">Current upload</string>
    <string name="currTotalSec">Total this sec:</string>
    <string name="currTotalMin">Total this min:</string>
    <string name="currFileSec">Files this sec:</string>
    <string name="currDownloadTitle">Current download</string>
    <string name="transferredDataTitle">Transferred data since start</string>
    <string name="transferredSent">Sent:</string>
    <string name="transferredReceived">Received:</string>
    <string name="transferredSum">Sum:</string>
    <string name="transferredPacketsTitle">Transferred packets since start</string>
    <string name="transferredFilesTitle">Transferred files since start</string>

    //global config
    <string name="config">Configurations</string>
    <string name="serverQueriesTitle">Server queries</string>
    <string name="queryGuestGroup">Query-guest-group:</string>
    <string name="queryCommandsTillFlood">Commands till flood:</string>
    <string name="queryPeriodTillFlood">Period till flood(sec):</string>
    <string name="queryBanTimeFlood">Ban time for flood(sec):</string>
    <string name="queryConnectionPerIp">Query-connections per IP:</string>
    <string name="standardGroupsTitle">Standardgroups</string>
    <string name="serverAdminTemplate">Serveradmin-Template:</string>
    <string name="ServerGuestTemplate">Serverguest-Template:</string>
    <string name="channelAdminTemplate">Channeladmin-Template:</string>
    <string name="channelGuestTemplate">Channelguest-Template:</string>
    <string name="transferClientView">File transfers and limits from the user\'s perspective</string>
    <string name="transferMaxUpload">Maximum upload:</string>
    <string name="transferMaxDownload">Maximum download:</string>
    <string name="transferPort">File transfer port:</string>
    <string name="unlimited">unlimited</string>

    //endings
    <string name="strGibs">%1$s GiB/s</string>
    <string name="strMibs">%1$s MiB/s</string>
    <string name="strKibs">%1$s KiB/s</string>
    <string name="strGib">%1$s GiB</string>
    <string name="strMib">%1$s MiB</string>
    <string name="strGb">%1$s GB</string>
    <string name="strMb">%1$s MB</string>
    <string name="strMillion">%1$s M</string>

    //serverList
    <string name="startServer">Start</string>
    <string name="stopServer">Stop</string>

    //other
    <string name="slash">/</string>
    <string name="virtualServerListTitle">Virtual server list</string>

    //bottom navigation bar
    <string name="btnHome">Home</string>
    <string name="btnStats">Stats</string>
    <string name="btnServer">Server</string>
    <string name="btnOthers">Others</string>
    <string name="btnAdvanced">Advanced</string>

    //spinner Items
    <string name="vServerStats">V-Server Stats</string>
    <string name="vServerAdvanced">Advanced</string>
    <string name="vServerBansAndCo">Bans &amp; Complaints</string>
    <string name="vServerUserAndChannel">User &amp; Channel</string>
    <string name="vServerDataBase">User Database</string>
    <string name="vServerRights">Rights</string>
    <string name="vServerOthers">Others</string>

    //virtual server general
    <string name="virtualServerTitle">Virtual server</string>
    <string name="vServerGeneral">General</string>
    <string name="vServerBaseConfig">Base configuration</string>
    <string name="vServerName">Name:</string>
    <string name="vServerPhonetic">Phonetic:</string>
    <string name="vServerMachineId">Machine-ID:</string>
    <string name="vServerPort">Port:</string>
    <string name="vServerState">State:</string>
    <string name="vServerAutostart">Autostart:</string>
    <string name="vServerSlots">Slots:</string>

    //Alert dialogs
    <string name="AlertNotEmpty">The input field must not be empty!</string>
    <string name="AlertNotOnlyNumeric">The input field must contain numbers only!</string>
    <string name="AlertNotOnlyBool">Permissible inputs are: true or false only!</string>
</resources>