<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/top_nav_bar_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:subtitle="@string/loginTitle"
            app:subtitleTextColor="@color/soft_white"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:titleTextColor="@color/soft_white" />

        <ScrollView
            android:id="@+id/scrollViewLogin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/top_nav_bar_login"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_tilIp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="48dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_corner_toggle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_textInputIp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:hint="@string/ip"
                        android:inputType="number|numberDecimal"
                        android:text="116.203.114.17"
                        android:textStyle="bold" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_tilUserPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_corner_toggle"
                    app:layout_constraintEnd_toEndOf="@+id/edit_tilUserName"
                    app:layout_constraintStart_toStartOf="@+id/edit_tilUserName"
                    app:layout_constraintTop_toBottomOf="@+id/edit_tilUserName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_textInputUserPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/loginPassword"
                        android:inputType="textPassword"
                        android:text="BA1990F7D9" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/edit_tilIp"
                    app:layout_constraintStart_toStartOf="@+id/edit_tilIp"
                    app:layout_constraintTop_toBottomOf="@+id/edit_tilIp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_tilPort"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/round_corner_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textInputPort"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:hint="Port"
                            android:inputType="number|numberDecimal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/edit_tilQport"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/round_corner_toggle">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textInputQport"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:hint="Query-Port"
                            android:inputType="number|numberDecimal"
                            android:text="10011" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <CheckBox
                    android:id="@+id/cb_save_to_fav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_corner_toggle"
                    android:checked="false"
                    android:text="@string/saveToFav"
                    app:layout_constraintStart_toStartOf="@+id/edit_tilUserPassword"
                    app:layout_constraintTop_toBottomOf="@+id/edit_tilUserPassword" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_tilUserName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_corner_toggle"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_textInputUserName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/loginName"
                        android:text="serveradmin" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/edit_tilListName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/round_corner_toggle"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@+id/edit_tilUserPassword"
                    app:layout_constraintStart_toStartOf="@+id/cb_save_to_fav"
                    app:layout_constraintTop_toBottomOf="@+id/cb_save_to_fav"
                    tools:visibility="visible">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_textInputListName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/favName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="600dp"
                    android:text="@string/connect"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/edit_tilUserPassword"
                    app:layout_constraintStart_toStartOf="@+id/edit_tilUserPassword"
                    app:layout_constraintTop_toBottomOf="@+id/edit_tilListName" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>